Fixed styling of buttons on iPhone and iPad.

--- a/web/styles/style.css
+++ b/web/styles/style.css
@@ -647,6 +647,7 @@ input.button {
     border: 0.0625rem solid #FFFFFF;
     border-radius: 0.25rem;
     font-weight: bold;
+    -webkit-appearance: none;
 }
 
 input.button-large {
